# light-client-sp1

./: Cargo.toml  RUNNING_GUIDE.md  check_jobs.sh  check_jobs_detail.sh  light_client_store.json  test_api.sh  test_api2.sh  test_api3.sh  test_api_v2.sh
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json
lib/: Cargo.toml
lib/src/: bls.rs  config.rs  consensus.rs  cross_chain.rs  l2.rs  lib.rs  merkle.rs  mpt.rs  types.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: api.rs  beacon_api.rs  eth_rpc.rs  lib.rs  sync.rs
